extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_body_body_entered(body):
	pass # Replace with function body.


func _on_head_body_entered(body):
	pass # Replace with function body.


func _on_leg_body_entered(body):
	pass # Replace with function body.
